@@ -16,6 +16,7 @@ Maintenance
 -----------
 
 * Allow concurrency on the OrthancPluginRegisterIncomingHttpRequestFilter() callbacks
+* Allow empty request body in "/modalities/{id}/echo"
 
 
 Version 1.8.1 (2020-12-07)
